# flask_login_tester

./: pyproject.toml
src/flask_login_tester/: app.py  main.py  routes.py
src/flask_login_tester/apps/login_1/: routes.py
src/flask_login_tester/plex/: __init__.py  authentication.py  config.py  exceptions.py
src/flask_login_tester/static/: index.js
src/flask_login_tester/templates/: config.html  home.html  index.html  login.html
